--- a/index.html
+++ b/index.html
@@ -20,15 +20,68 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        CONTENT STARTS HERE
+
         <header>
-            <h1>Random Design Co.</h1>
+            <h1 id="title">Random Design Co.</h1>
             <nav>
             </nav>
         </header>
 
-        <h2>Be Random</h2>
-        <button href="#">Omg Yes!</button>
+        <section class="be-random">
+            <h2>Be Random</h2>
+            <button href="#">Omg Yes!</button>
+            <img src="images/purple-bg.jpg" alt="purple background">
+        </section>
+
+        <section class="about-us">
+            <h1>About Us</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos nam non, explicabo cum inventore, molestiae fuga nulla repellendus architecto rerum nostrum at amet, officia eum quisquam earum ipsam similique ad!</p>
+        </section>
+
+        <hr>
+
+        <section class="latest-work">
+            <div class="work">
+                <h1>Project 1</h1>
+                <img src="images/1-cocktail.jpg" alt="cocktail">
+            </div>
+
+            <div class="work">
+                <h1>Project 2</h1>
+                <img src="images/2-disco.jpg" alt="disco">
+            </div>
+
+              <div class="work">
+                <h1>Project 3</h1>
+                <img src="images/3-bookstore.jpg" alt="bookstore">
+            </div>
+
+            <div class="work">
+                <h1>Project 4</h1>
+                <img src="images/4-traffic.jpg" alt="traffic">
+            </div>
+
+            <div class="work">
+                <h1>Project 5</h1>
+                <img src="images/5-concert.jpg" alt="concert">
+            </div>
+
+            <div class="work">
+                <h1>Project 6</h1>
+                <img src="images/6-nightlife.jpg" alt="night life">
+            </div>
+
+            <div class="work">
+                <h1>Project 7</h1>
+                <img src="images/7-bar.jpg" alt="bar">
+            </div>
+        </section>
+
+        <hr>
+
+        <footer>
+            <p>&copy; 2016 Random Design Co.</p>
+        </footer>
 
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
